# RESL

./: .gitignore  Cargo.toml  README.md
crates/compiler/reslc/: Cargo.toml  build.rs  messages.ftl
crates/compiler/reslc/src/: abi.rs  artifact.rs  attr.rs  codegen.rs  compiler.rs  context.rs  hir_ext.rs  hir_ext_build.rs  main.rs
crates/compiler/reslc/src/check/: mod.rs
crates/compiler/reslc/src/monomorphize/: collect.rs  errors.rs  mod.rs
crates/compiler/reslc/src/slir_build/: builder.rs  context.rs  mod.rs  resl_intrinsic.rs  resl_primitive_ty.rs  reslc_intrinsic.rs  shims.rs  special_cases.rs  value.rs
crates/compiler/reslc/src/slir_build2/: builder.rs  context.rs  mod.rs
crates/compiler/reslc/src/slir_build_2/: layout.rs  mod.rs  mono_item.rs  scalar.rs
crates/compiler/reslc/src/slir_build_2/mir/: block.rs  intrinsic.rs  locals.rs  mod.rs  operand.rs  place.rs  rvalue.rs  statement.rs  traversal.rs
crates/compiler/reslc/src/slir_build_2/traits/: backend.rs  builder.rs  consts.rs  declare.rs  intrinsic.rs  misc.rs  mod.rs  statics.rs  type_.rs
crates/compiler/reslc/src/stable_cg/: layout.rs  mod.rs  mono_item.rs  scalar.rs
crates/compiler/reslc/src/stable_cg/mir/: analyze.rs  block.rs  locals.rs  mod.rs  operand.rs  place.rs  rvalue.rs  statement.rs  traversal.rs
crates/compiler/reslc/src/stable_cg/traits/: builder.rs  consts.rs  declare.rs  intrinsic.rs  misc.rs  statics.rs  type_.rs
crates/compiler/rislc/: Cargo.toml  build.rs  messages.ftl
crates/compiler/rislc/src/: abi.rs  artifact.rs  attr.rs  codegen.rs  compiler.rs  context.rs  hir_ext_build.rs
crates/compiler/slir/: Cargo.toml
crates/compiler/slir/src/: builtin_function.rs  core.rs  dependencies.rs  import.rs  import_cfg.rs  lib.rs  rvsdg.rs  rvsdg_to_scf.rs  serde.rs  shared_registry.rs  ty.rs
crates/resl_cli/: Cargo.toml
crates/risl_cli/: Cargo.toml
crates/slir-explorer/: Cargo.toml
crates/slir-explorer/src/: app.rs  lib.rs  main.rs  module_list.rs  no_module_selected.rs
crates/slir-explorer/src/module/: mod.rs  module.rs  no_item_selected.rs  ty.rs  url.rs  wgsl_explorer.rs
crates/slir-explorer/src/module_explorer/: adt_explorer.rs  cfg_explorer.rs  enum_explorer.rs  function_explorer.rs  inner.rs  mod.rs  struct_explorer.rs  tpe.rs
crates/slir-explorer/style/: main.scss
tests/examples/: resl-build  risl-build
tests/examples/builtin_vec/: Cargo.toml
tests/examples/builtin_vec/src/: main.rs
tests/examples/hello_world/: Cargo.toml
tests/examples/hello_world/src/: main.rs
tests/examples/simple_enum/: Cargo.toml
tests/examples/simple_enum/src/: main.rs
tests/examples/simple_lib/: Cargo.toml
tests/examples/simple_lib/src/: lib.rs
tests/examples/slice/: Cargo.toml
tests/examples/slice/src/: main.rs
tests/examples/variable_pointers/: Cargo.toml
tests/examples/workgroup_binding/: Cargo.toml
(+149 files in other folders)
