[workspace]
resolver = "2"
members = [
    "crates/compiler/reslc",
    "crates/compiler/slir",
    "crates/resl_cli",
    "crates/slir-explorer",
    "tests/examples/hello_world",
    "tests/examples/simple_enum",
    "tests/examples/simple_lib",
    "tests/examples/slice",
    "tests/examples/variable_pointers",
    "tests/examples/workgroup_binding",
]
default-members = [
    "crates/compiler/reslc",
    "crates/compiler/slir",
    "crates/resl_cli",
    "crates/slir-explorer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ar = "0.9"
arrayvec = "0.7"
bincode = "2.0.0-rc.3"
bit-set = "0.8"
bit-vec = "0.8"
either = "1.15"
indexmap = "2.7"
index_vec = "0.1"
internment = "0.8"
itertools = "0.14"
ordered-float = "4.6"
regex = "1.11"
rustc-hash = "2.1"
serde = "1.0"
slir = { path = "./crates/compiler/slir", version = "0.1.0" }
slotmap = "1.0"
smallvec = "1.13"
thin-vec = "0.2"
