[package]
name = "reslc"
description = "Compiler for the Rust Embedded Shading Language"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reslc"

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private = true

[dependencies]
ar = { workspace = true }
bincode = { workspace = true, features = ["serde"]}
indexmap = { workspace = true }
internment = { workspace = true }
rustc-hash = { workspace = true }
slir = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
thin-vec = "0.2"
tracing = "0.1.37"

#[target.'cfg(unix)'.dependencies]
#tracing-core = "0.1.30"
#rustc_abi = { path = "../../../../rust/compiler/rustc_abi" }
#rustc_ast = { path = "../../../../rust/compiler/rustc_ast" }
#rustc_codegen_ssa = { path = "../../../../rust/compiler/rustc_codegen_ssa" }
#rustc_data_structures = { path = "../../../../rust/compiler/rustc_data_structures" }
#rustc_driver = { path = "../../../../rust/compiler/rustc_driver" }
#rustc_hir = { path = "../../../../rust/compiler/rustc_hir" }
#rustc_interface = { path = "../../../../rust/compiler/rustc_interface" }
#rustc_metadata = { path = "../../../../rust/compiler/rustc_metadata" }
#rustc_middle = { path = "../../../../rust/compiler/rustc_middle" }
#rustc_monomorphize = { path = "../../../../rust/compiler/rustc_monomorphize" }
#rustc_query_system = { path = "../../../../rust/compiler/rustc_query_system" }
#rustc_session = { path = "../../../../rust/compiler/rustc_session" }
#rustc_smir = { path = "../../../../rust/compiler/rustc_smir" }
#rustc_span = { path = "../../../../rust/compiler/rustc_span" }
#rustc_target = { path = "../../../../rust/compiler/rustc_target" }
#stable_mir = { path = "../../../../rust/compiler/stable_mir" }
